--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -221,6 +221,12 @@
                 <span class="style-card-label" data-bind="text: gradient.displayName"></span>
             </div>
             <!--/ko -->
+            <div class="style-card style-card-empty">
+                <button class="btn-round" data-bind="click: $component.addGradient"></button>
+                <div class="style-card-label">
+                    Add gradient
+                </div>
+            </div>
         </div>
     </article>
 
