--- a/src/workshops/gradients/gradientEditor.html
+++ b/src/workshops/gradients/gradientEditor.html
@@ -1,10 +1,16 @@
 <fieldset class="form flex-item flex-item-grow" data-bind="scrollable: true">
     <!-- ko if: gradientViewModel() -->
     <div class="form-group">
-        <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Name of the gradient', click: initialize"></button>
+        <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Name of the gradient'"></button>
         <label for="gradientName">Gradient name</label>
         <input id="gradientName" type="text" class="form-control" spellcheck="false"
             data-bind="textInput: gradientViewModel().displayName, focus: true">
+    </div>
+    <div class="form-group">
+        <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Degree of the gradient'"></button>
+        <label for="gradientDegree">Degree</label>
+        <input id="gradientDegree" type="number" class="form-control" spellcheck="false"
+            data-bind="textInput: direction, focus: true">
     </div>
 
     <style data-bind="jss: gradientPreview"></style>
@@ -13,26 +19,35 @@
         <div class="dropzone-showbox">
             <div class="fit gradient-preview"></div>
         </div>
-
-        <div style="width: 100%; height: 25px;margin: 15px 0px;">
+        <div style="width: 100%; height: 25px;margin-top: 15px;">
             <div class="fit gradient-preview"></div>
+        </div>
+        <div style="width: 100%; height: 15px; margin-top: 1px;" data-bind="event: {mousemove: function() {$component.onMouseMove($element, event)}}">
+            <!-- ko foreach: { data: gradientViewModel().colorStops, as: 'colorStop' } -->
+            <div draggable="true" style="position: absolute; height: 10px; width: 10px;" data-bind="visible: $component.initializePointer($element, colorStop), event:{ mousedown: function() {$component.onMouseDown($index, $element, event)}, mouseup: $component.onMouseUp}"></div>
+            <!-- /ko -->
         </div>
     </div>
 
 
     <div class="style-card style-card-empty">
-        <div style="max-height: 450px;" data-bind="scrollable: true">
-            <!-- ko foreach: { data: gradientViewModel().colorStops, as: 'colorStop' } -->
-            <div>
-                <a href="#" role="button" aria-label="Background color" aria-haspopup="true"
-                data-bind="balloon: { component: { name: 'color-picker-view', params: { colorValue: colorStop.color, onSelect: function(data) { $component.changeColor($index, data); }} } }">
-                    <div style="width: 30px; height: 30px;" data-bind="style: {background: colorStop.color}"></div>
-                </a>
-                <p>Length: <input data-bind="textInput: colorStop.length" /></p>
-            </div>
-            <!-- /ko -->
+        <div class="form-group" style="max-height: 450px;" data-bind="scrollable: true">
+            <!-- <p>Degree: <input data-bind="textInput: gradientViewModel().direction"/></p> -->
+            <label for="gradientColors">Colors</label>
+            <ul class="palette">
+                <!-- ko foreach: { data: gradientViewModel().colorStops, as: 'colorStop' } -->
+                    <li class="color-box">
+                        <a href="#" role="listitem" class="color" 
+                        data-bind="balloon: { component: { name: 'color-picker-view', params: { colorValue: colorStop.color, onSelect: function(data) { $component.changeColor($index, data); }} } }, style: { background: colorStop.color }"></a>
+                    </li>
+                <!-- /ko -->
+                <li class="color-box">
+                    <a href="#" title="Clear gradient" class="color" data-bind="click: $component.addColor">
+                        <i class="paperbits-icon paperbits-simple-add"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
-        <a href="#" data-bind="click: addColor">Add color</a>
     </div>
     <!-- /ko -->
 </fieldset>
