--- a/src/workshops/gradients/gradientEditor.html
+++ b/src/workshops/gradients/gradientEditor.html
@@ -19,20 +19,19 @@
         <div class="dropzone-showbox">
             <div class="fit gradient-preview"></div>
         </div>
-        <div style="width: 100%; height: 25px;margin-top: 15px;">
+        <div class="slider-display">
             <div class="fit gradient-preview"></div>
         </div>
-        <div style="width: 100%; height: 15px; margin-top: 1px;" data-bind="event: {mousemove: function() {$component.onMouseMove($element, event)}}">
+        <div class="color-pointer-list" data-bind="event: {mousemove: function() {$component.onMouseMove($element, event)}}">
             <!-- ko foreach: { data: gradientViewModel().colorStops, as: 'colorStop' } -->
-            <div draggable="true" style="position: absolute; height: 10px; width: 10px;" data-bind="visible: $component.initializePointer($element, colorStop), event:{ mousedown: function() {$component.onMouseDown($index, $element, event)}, mouseup: $component.onMouseUp}"></div>
+            <div class="color-pointer" draggable="true" data-bind="visible: $component.initializePointer($element, colorStop), event:{ mousedown: function() {$component.onMouseDown($index, $element, event)}, mouseup: $component.onMouseUp}"></div>
             <!-- /ko -->
         </div>
     </div>
 
 
     <div class="style-card style-card-empty">
-        <div class="form-group" style="max-height: 450px;" data-bind="scrollable: true">
-            <!-- <p>Degree: <input data-bind="textInput: gradientViewModel().direction"/></p> -->
+        <div class="form-group" data-bind="scrollable: true">
             <label for="gradientColors">Colors</label>
             <ul class="palette">
                 <!-- ko foreach: { data: gradientViewModel().colorStops, as: 'colorStop' } -->
