Replace style in colorPickerView with scss class.

--- a/src/workshops/colors/colorPickerView.html
+++ b/src/workshops/colors/colorPickerView.html
@@ -1,4 +1,4 @@
-<fieldset style="min-width: 250px; height: 100%; width: 100%; margin: 5px" class="form flex-item flex-item-grow" data-bind="scrollable: true">
+<fieldset class="pickr-dialog form flex-item flex-item-grow" data-bind="scrollable: true">
     <div class="color-picker">
          <!-- ko if: colorValue -->
          <div data-bind="colorPicker: { selectedColor: colorValue }"></div>
