--- a/src/workshops/gradients/gradientEditor.html
+++ b/src/workshops/gradients/gradientEditor.html
@@ -8,8 +8,8 @@
     </div>
     <div class="form-group">
         <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Degree of the gradient'"></button>
-        <label for="gradientDegree">Degree</label>
-        <input id="gradientDegree" type="number" class="form-control" spellcheck="false"
+        <label for="gradientDegree">Degree: <span data-bind="text: direction"></span>°</label>
+        <input id="gradientDegree" type="range" min="0" max="360" class="form-control"
             data-bind="textInput: direction, focus: true">
     </div>
 
