--- a/src/workshops/gradients/gradientSelector.html
+++ b/src/workshops/gradients/gradientSelector.html
@@ -2,17 +2,17 @@
     <h1>Gradient</h1>
     <hr/>
 
-    <ul class="palette">
-        <li class="color-box">
+    <div class="palette">
+        <div class="color-box">
             <a href="#" title="Clear gradient" class="color" data-bind="click: $component.clearGradients">
                 <i class="paperbits-icon paperbits-ban"></i>
             </a>
-        </li>
+        </div>
 
         <!-- ko foreach: { data: gradients, as: 'gradient' } -->
-        <li class="color-box" data-bind="css: { selected: gradient === $component.selectedGradient() }">
+        <div class="color-box" data-bind="css: { selected: gradient === $component.selectedGradient() }">
             <a href="#" class="color" data-bind="click: $component.selectGradient, attr: { title: gradient.displayName }, style: { background: gradient.value }"></a>
-        </li>
+        </div>
         <!--/ko -->
-    </ul>
+    </div>
 </div>
