--- a/src/workshops/shadows/shadowSelector.html
+++ b/src/workshops/shadows/shadowSelector.html
@@ -2,7 +2,7 @@
     <h1>Shadow</h1>
     <hr />
 
-    <div class="list">
+    <div class="list" data-bind="scrollable: true">
         <a href="#" class="list-item" title="Clear shadow" data-bind="click: $component.clearShadow, focus: true">
             <span class="list-item-label">
                 (Inherit)
