--- a/src/workshops/snippets/styleVariationSelector.html
+++ b/src/workshops/snippets/styleVariationSelector.html
@@ -1,5 +1,5 @@
 <div class="editor">    
-    <div class="flex flex-column list-container">
+    <div class="flex flex-column list">
         <!--ko if: $component.working()-->
         <spinner></spinner>
         <!--/ko-->
