--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -2,7 +2,7 @@
     <label class="form-label">
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#backgroundCollapse'"></a>
         <b>Background</b>
-        <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Manage background'"></button>
+        <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Manage background'"></button>
     </label>
 
     <div id="backgroundCollapse" class="collapse form-group-collapse">
@@ -75,7 +75,7 @@
         <label class="form-label">
             Background sizing
             <button class="btn btn-info" type="button"
-                title="Help" data-bind="tooltipToggle: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
+                data-bind="tooltipToggle: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
         </label>
         <div class="form-group">
             <label class="form-label">
@@ -92,7 +92,7 @@
         <label class="form-label">
             Background attachment
             <button class="btn btn-info" type="button"
-                title="Help" data-bind="tooltipToggle: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
+                data-bind="tooltipToggle: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
         </label>
         <div class="form-group">
             <label class="form-label">
