--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -2,7 +2,7 @@
     <label class="form-label">
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#alignmentCollapse'"></a>
         <b>Content alignment</b>
-        <button class="btn btn-info" type="button" title="Help"
+        <button class="btn btn-info" type="button"
             data-bind="tooltipToggle: 'Align content inside the container. Depending on viewport, the alignment can be different, following mobile-first approach. If not specified in current one, container applies configuration from closest smaller viewports.'"></button>
     </label>
 
@@ -46,7 +46,7 @@
     <label class="form-label">
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#contentFlowCollapse'"></a>
         <b>Content flow</b>
-        <button class="btn btn-info" type="button" title="Help"
+        <button class="btn btn-info" type="button"
             data-bind="tooltipToggle: 'Manage scrolling settings for container'"></button>
     </label>
     <div id="contentFlowCollapse" class="collapse form-group-collapse">
