--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -2,7 +2,7 @@
     <label class="form-label">
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#typographyCollapse'"></a>
         <b>Typography</b>
-        <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Manage text appearance'"></button>
+        <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Manage text appearance'"></button>
     </label>
 
     <div id="typographyCollapse" class="collapse form-group-collapse">
