Improvements to gradient editor.

--- a/src/workshops/gradients/colorStopEditor.html
+++ b/src/workshops/gradients/colorStopEditor.html
@@ -4,4 +4,11 @@
          <div data-bind="colorPicker: { selectedColor: colorValue }"></div>
          <!-- /ko -->
     </div>
+
+    <div class="flex-item btn-group">
+        <button class="btn" data-bind="click: deleteColorStop">
+            <i class="paperbits-icon paperbits-simple-remove"></i>
+            Delete color stop
+        </button>
+    </div>
 </fieldset>
