--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -3,7 +3,7 @@
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#alignmentCollapse'"></a>
         <b>Content alignment</b>
         <button class="btn btn-info" type="button"
-            data-bind="tooltipToggle: 'Align content inside the container. Depending on viewport, the alignment can be different, following mobile-first approach. If not specified in current one, container applies configuration from closest smaller viewports.'"></button>
+            data-bind="tooltip: 'Align content inside the container. Depending on viewport, the alignment can be different, following mobile-first approach. If not specified in current one, container applies configuration from closest smaller viewports.'"></button>
     </label>
 
     <div id="alignmentCollapse" class="collapse form-group-collapse">
@@ -47,7 +47,7 @@
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#contentFlowCollapse'"></a>
         <b>Content flow</b>
         <button class="btn btn-info" type="button"
-            data-bind="tooltipToggle: 'Manage scrolling settings for container'"></button>
+            data-bind="tooltip: 'Manage scrolling settings for container'"></button>
     </label>
     <div id="contentFlowCollapse" class="collapse form-group-collapse">
         <label class="form-label">
