--- a/src/workshops/shadows/shadowEditor.html
+++ b/src/workshops/shadows/shadowEditor.html
@@ -7,7 +7,7 @@
         <div id="mainCollapse" class="collapse form-group-collapse">
             <div class="form-group">
                 <button class="btn btn-info" type="button"
-                    data-bind="tooltipToggle: 'Name of the style'"></button>
+                    data-bind="tooltip: 'Name of the style'"></button>
                 <label for="style-name">Style name</label>
                 <input id="style-name" type="text" class="form-control" spellcheck="false"
                     data-bind="textInput: styleName">
