--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -8,7 +8,7 @@
         <div id="miscellaneousCollapse" class="collapse form-group-collapse">
             <div class="form-group">
                 <button class="btn btn-info" type="button"
-                    data-bind="tooltipToggle: 'Name of the style'"></button>
+                    data-bind="tooltip: 'Name of the style'"></button>
                 <label for="styleName">Style name</label>
                 <input id="styleName" type="text" class="form-control" spellcheck="false"
                     data-bind="textInput: styleName, focus: true">
