--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -73,6 +73,33 @@
 
         <!-- ko if: sourceKey() -->
         <label class="form-label">
+            Background position
+            <button class="btn btn-info" type="button"
+                data-bind="tooltip: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
+        </label>
+        <div class="form-group">
+            <label class="form-label">
+                <input name="positionConfig" type="radio" value="default" data-bind="checked: posConfig" />Default
+            </label>
+            <label class="form-label">
+                <input name="positionConfig" type="radio" value="offset" data-bind="checked: posConfig, event: { change: applyChanges }" />Offset
+            </label>
+        </div>
+        <!-- ko if: posConfig() == "offset" -->
+        <div class="form-group">
+            <label for="topOffset" class="form-label">Top offset (px)</label>
+            <input type="number" min="0" id="topOffset" class="form-control"
+                data-bind="textInput: topOffset" />
+        </div>
+        <div class="form-group">
+            <label for="leftOffset" class="form-label">Left offset (px)</label>
+            <input type="number" min="0" id="leftOffset" class="form-control"
+                data-bind="textInput: leftOffset" />
+        </div>
+        <!-- /ko -->
+
+
+        <label class="form-label">
             Background sizing
             <button class="btn btn-info" type="button"
                 data-bind="tooltip: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
