--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -75,7 +75,7 @@
         <label class="form-label">
             Background position
             <button class="btn btn-info" type="button"
-                data-bind="tooltip: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
+                data-bind="tooltip: '<p><b>Default:</b> Default position of the background image, can be selected by the buttons above.</p><p><b>Offset:</b> Customize the position of the background image by top and left offsets.</p>'"></button>
         </label>
         <div class="form-group">
             <label class="form-label">
