Removed scrolling from color stop editor.

--- a/src/workshops/gradients/colorStopEditor.html
+++ b/src/workshops/gradients/colorStopEditor.html
@@ -1,4 +1,4 @@
-<fieldset class="pickr-dialog form flex-item flex-item-grow" data-bind="scrollable: true">
+<fieldset class="pickr-dialog form flex-item flex-item-grow">
     <div class="color-picker">
          <!-- ko if: colorValue -->
          <div data-bind="colorPicker: { selectedColor: colorValue }"></div>
