--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -39,39 +39,56 @@
         <div class="dropzone">
             <div class="dropzone-controls">
                 <!-- ko if: sourceKey() -->
-                <svg alignment="top left" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <svg alignment="top left" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <polygon points="2,2 14,2 14,14" />
                 </svg>
-                <svg alignment="top center" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <svg alignment="top center" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <polygon points="2,2 14,2 14,14" />
                 </svg>
-                <svg alignment="top right" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <svg alignment="top right" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <polygon points="2,2 14,2 14,14" />
                 </svg>
-                <svg alignment="center left" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <svg alignment="center left" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <polygon points="2,2 14,2 14,14" />
                 </svg>
-                <svg alignment="center right" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <svg alignment="center right" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <polygon points="2,2 14,2 14,14" />
                 </svg>
-                <svg alignment="bottom left" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <svg alignment="bottom left" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <polygon points="2,2 14,2 14,14" />
                 </svg>
-                <svg alignment="bottom center" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <svg alignment="bottom center" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <polygon points="2,2 14,2 14,14" />
                 </svg>
-                <svg alignment="bottom right" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <svg alignment="bottom right" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <polygon points="2,2 14,2 14,14" />
                 </svg>
                 <!-- /ko -->
                 <style data-bind="jss: backgroundPreview"></style>
-                <a href="#" class="dropzone-showbox" alignment="center center" data-bind="alignment: { position: position, onChange: onAlignmentChange }">
+                <a href="#" class="dropzone-showbox" alignment="center center" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
                     <div class="fit background-preview"></div>
                 </a>
             </div>
         </div>
 
         <!-- ko if: sourceKey() -->
+  
+        <!-- ko if: horizontalOffsetDirection() && horizontalOffsetDirection() !== 'center' -->
+            <div class="form-group">
+                <label class="form-label"><span class="capitalize" data-bind="text: horizontalOffsetDirection"></span> offset (px)</label>
+                <input type="number" min="0" class="form-control"
+                    data-bind="textInput: horizontalOffset">
+            </div>
+        <!-- /ko -->
+
+        <!-- ko if: verticalOffsetDirection() && verticalOffsetDirection() !== 'center' -->
+            <div class="form-group">
+                <label class="form-label"><span class="capitalize" data-bind="text: verticalOffsetDirection"></span> offset (px)</label>
+                <input type="number" min="0" class="form-control"
+                    data-bind="textInput: vertialOffset">
+            </div>
+        <!-- /ko -->
+        
         <label class="form-label">
             Background sizing
             <button class="btn btn-info" type="button"
