Adjusted tooltip for gradient direction.

--- a/src/workshops/gradients/gradientEditor.html
+++ b/src/workshops/gradients/gradientEditor.html
@@ -22,7 +22,7 @@
         </label>
         <div id="settingsCollapse" class="collapse form-group-collapse">
             <div class="form-group">
-                <button class="btn btn-info" type="button" data-bind="tooltip: 'Degree of the gradient'"></button>
+                <button class="btn btn-info" type="button" data-bind="tooltip: 'Angle that determines gradient direction.'"></button>
                 <label for="gradientDegree">Rotate: <span data-bind="text: direction"></span>°</label>
                 <input id="gradientDegree" type="range" min="0" max="360" class="form-control"
                     data-bind="textInput: direction, focus: true">
