Fixed tooltip in gradient editor.

--- a/src/workshops/gradients/gradientEditor.html
+++ b/src/workshops/gradients/gradientEditor.html
@@ -59,7 +59,7 @@
                         </div>
                         <!-- /ko -->
                         <div class="color-box">
-                            <a href="#" title="Clear gradient" class="color" data-bind="click: $component.addColor">
+                            <a href="#" title="Add color stop" class="color" data-bind="click: $component.addColor">
                                 <i class="paperbits-icon paperbits-simple-add"></i>
                             </a>
                         </div>
