--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -7,30 +7,29 @@
 
     <div id="backgroundCollapse" class="collapse form-group-collapse">
         <div class="tabs">
-            <div class="tab" data-bind="css: { 'tab-is-active': !sourceKey() && !colorKey() && !gradientKey() }"
-                title="No background">
-                <a href="#" role="button" aria-label="Clear background" data-bind="click: clearBackground">
+            <div class="tab" data-bind="css: { 'tab-is-active': !sourceKey() && !colorKey() && !gradientKey() }">
+                <a href="#" role="button" aria-label="Clear background" data-bind="tooltip: 'Clear background', click: clearBackground">
                     <i class="paperbits-icon paperbits-ban"></i>
                 </a>
             </div>
 
-            <div class="tab" data-bind="css: { 'tab-is-active': sourceKey }" title="Background picture">
+            <div class="tab" data-bind="css: { 'tab-is-active': sourceKey }">
                 <a href="#" role="button" aria-label="Background picture" aria-haspopup="true"
-                    data-bind="balloon: { component: { name: 'media-selector', params: { onSelect: $component.onMediaSelected } } }">
+                    data-bind="tooltip: 'Background picture', balloon: { component: { name: 'media-selector', params: { onSelect: $component.onMediaSelected } } }">
                     <i class="paperbits-icon paperbits-image-2"></i>
                 </a>
             </div>
 
-            <div class="tab" data-bind="css: { 'tab-is-active': colorKey }" title="Background color">
+            <div class="tab" data-bind="css: { 'tab-is-active': colorKey }">
                 <a href="#" role="button" aria-label="Background color" aria-haspopup="true"
-                    data-bind="balloon: { component: { name: 'color-selector', params: { onSelect: $component.onColorSelected, selectedColor: $component.color } } }">
+                    data-bind="tooltip: 'Background color', balloon: { component: { name: 'color-selector', params: { onSelect: $component.onColorSelected, selectedColor: $component.color } } }">
                     <i class="paperbits-icon paperbits-paint-bucket-40"></i>
                 </a>
             </div>
 
-            <div class="tab" data-bind="css: { 'tab-is-active': gradientKey }" title="Background gradient">
+            <div class="tab" data-bind="css: { 'tab-is-active': gradientKey }">
                 <a href="#" role="button" aria-label="Background gradient" aria-haspopup="true"
-                    data-bind="balloon: { component: { name: 'gradient-selector', params: { onSelect: $component.onGradientSelected, selectedGradient: $component.gradientKey } } }">
+                    data-bind="tooltip: 'Background gradient', balloon: { component: { name: 'gradient-selector', params: { onSelect: $component.onGradientSelected, selectedGradient: $component.gradientKey } } }">
                     <i class="paperbits-icon paperbits-gradient"></i>
                 </a>
             </div>
